[package]
name = "roblox-buffer"
description = "A serializable and deserializable representation of the Roblox buffer type."
license = "MPL-2.0"
version = "1.0.0"
edition = "2024"

[dependencies]
data-encoding = "2.9.0"
serde = { version = "1.0.163", features = ["derive"] }
zstd = { version = "0.13.3", default-features = false }

[dev-dependencies]
serde_json = "1.0.140"
